--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Alexandr CV</title>
-        <link href="styles.css" rel="stylesheet"/>
+        <link href="Styles.css" rel="stylesheet"/>
     </head>
     <body>
         <div class="container">
